fix: overflow of text in output container

--- a/style.css
+++ b/style.css
@@ -50,8 +50,7 @@ button {
     height: 10vh;
     margin-top: 2rem;
     padding: 1rem;
-    overflow: auto;
-    resize: none;
+    word-break: break-all;
 }
 
 footer {
